# astronet

./: README.md  env.php  index.php  phpbb.sql
3d/: ._Earth_1_12756.glb  ._Jupiter_1_142984.glb  ._Mars_1_6792.glb  ._Mercury_1_4878.glb  ._Neptune_1_49528.glb  ._Saturn_1_120536.glb  ._Uranus_1_51118.glb  ._Venus_1_12103.glb  envisat.glb
backend/: .env  api.py  main.py
backend/astronet_backend/: __init__.py  dbhandler.py
classes/: APIkey.php  Exoplanet.php  PHPbbHandler.php  SSPlanet.php  Satellite.php  SatelliteArt.php  Star.php  User.php
grafika/: logo.cdr  main_buttons.cdr
js/: ._model-viewer.min.js  menu_selected.js
pages/: API.php  account.php  administration.php  domu.php  edit.php  login.php  o_projektu.php  objekty.php  register.php  resetpass.php
pages/administration/: api_keys.php  users.php
pages/domu/: logged_in.php  logged_in_bak.php  logged_out.php
pages/lists/: const.php  exoplanets.php  satellites.php  search.php  solarsystem.php  stars.php
pybackend/: pyproject.toml  server.py
pybackend/astralcompass/: const.py  main.py
scripts/: APIscripts.php  Db.php  logout.php  mysql_connect.php  privcheck.php  querystring_h.php  sessioncheck.php
scripts/ajax_loc_selector/: citieslist.php  statelist.php
scripts/location/: findcity.php
styles/: domu.css  main.css
