[tool.poetry]
name = "astralcompass-pybackend"
version = "0.1.0"
description = "Python backend for the AstralCompass App"
authors = ["xehos <adahu04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flatlib = "^0.2.3"
requests = "^2.28.0"
pytz = "^2022.1"
timezonefinder = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
